<resources>
    <string name="app_name">BizzBee</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié</string>
    <string name="se_connecter">Se Connecter</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="votre_mot_de_passe">Votre mot de passe : *</string>
    <string name="votre_nom">Nom : *</string>
    <string name="nom">Nom</string>
    <string name="accueil">Accueil</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="connexion">Connexion</string>
    <string name="about">A propos</string>
    <string name="qui_sommes_nous">Qui sommes nous ?</string>
    <string name="a_propos_text">Nous sommes deux équipes de développeurs constituées d`une équipe en charge de la récupération des données et une en charge du développement web et mobile . Nous avons développé cette application dans le cadre de l`IUT de Lannion.</string>
    <string name="objectif">Objectif du projet !</string>
    <string name="a_propos_sujet">L`objectif de ce projet est le monitoring de ruches pour permettre un suivi en temps réel de l`évolution d`un ou plusieurs ruchers. Les différentes données collectées sont : la température de la ruche et de l`environnement extérieur, le taux d`humidité dans la ruche et le poids de la ruche.</string>
    <string name="equipe">Equipe en charge de la partie web et mobile :</string>
    <string name="mebres_1">Maxime Gautier</string>
    <string name="mebres_2">Thomas Audo</string>
    <string name="mebres_3">Gwendal Houssaye</string>
    <string name="mebres_4">Mathis Desbois</string>
    <string name="bizzbee_logo">Bizzbee logo</string>
    <string name="ruchers_ruches">Ruchers / Ruches</string>
    <string name="tableau_de_bord">Tableau de bord</string>
    <string name="rucher">Rucher</string>
    <string name="ruches">Ruches</string>
    <string name="ruche">Ruche</string>
    <string name="graphes">Graphes</string>
    <string name="param_tres">Paramètres</string>

    <string-array name="Planets">
        <item>Sun</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <string name="movies_categories_key">categoriesKey</string>
    <string name="default_movies_categories">popular</string>
    <string name="rester_connect">Rester connecté</string>
    <string name="subtitle">ID : </string>
    <string name="principal">Principal</string>
    <string name="informations">Informations</string>
</resources>
