<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_accueil"
            android:icon="@drawable/ic_home"
            android:title="@string/accueil" />

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_home"
            android:title="@string/tableau_de_bord"
            android:visible="false" />

        <item
            android:id="@+id/nav_rucher"
            android:icon="@drawable/ic_list"
            android:title="@string/ruchers_ruches"
            android:visible="false" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_connect"
            android:icon="@drawable/ic_account"
            android:title="@string/connexion" />

        <item
            android:id="@+id/nav_deconnect"
            android:icon="@drawable/ic_power"
            android:title="@string/deconnexion"
            android:visible="false" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/about" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_info"
            android:title="@string/param_tres" />
    </group>
</menu>
